# yard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  pyproject.toml  railway.json  requirements.txt  server.py  start.sh
data/demo_properties/: 2455_culebra.json  4123_mccullough.json  7821_blanco.json
docs/: MASTER_PLAN_v7.md  SPRINT_14_DAY_v3.md  sentinel_prd.md
hermes/: SOUL.md  config-notes.md
landing/: index.html  privacy.html  vercel.json
landing/api/: submit.py
landing/api/webhooks/: cal.py
reports/: deliver.py  generate.py
reports/templates/: monthly_report.html  om_analysis.html
scanner/: scan_bexar.py  score.py
scripts/: eval.py  generate_demo_oms.py
skills/: _stagehand.py
skills/comps_lookup/: SKILL.md  run.py
skills/deed_lookup/: SKILL.md  run.py
skills/maturity_estimator/: SKILL.md  run.py
skills/owner_lookup/: SKILL.md  run.py
skills/parse_om/: SKILL.md  run.py
skills/permit_lookup/: SKILL.md  run.py
skills/portfolio_crawler/: SKILL.md  run.py
skills/synthesize_analysis/: SKILL.md  run.py
skills/tax_lookup/: SKILL.md  run.py
skills/underwrite/: run.py
skills/violations_lookup/: SKILL.md  run.py
ui/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: AnalysisView.tsx  DataFeed.tsx  DemoView.tsx  DocPanel.tsx  DropZone.tsx  IngestionView.tsx  InvestigationFeed.tsx  LiveIngestionView.tsx  PropertyHeader.tsx  ResultsPanel.tsx  SynthesisPanel.tsx  (+2 more)
webhooks/: cal_handler.py  cal_metrics.py  cal_register.py
