[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous multifamily OM analysis agent"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "python-multipart>=0.0.28",
    "openai>=2.37.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "stagehand>=3.20.0",
    "vulture>=2.11",
    "ruff>=0.4.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "resend>=2.0.0",
]
